# advanced-prompt-processor

./: .gitignore  CHANGELOG.md  QUICK_START.md  README.md  __init__.py  pyproject.toml  requirements.txt  upload_to_github.bat
Random prompt/: random画师.xlsx  random角色.xlsx  所长个人法典结构化fix.xlsx
Tag knowledge/: README.md  artists.csv  characters.csv  copyrights.csv  general.csv  quality.csv  rating.csv  special.csv
nodes/: advanced_prompt_processor.py  gelbooru_accurate_extractor.py  random_artist_selector.py  random_character_selector.py  random_prompt_selector_enhanced.py  xml_prompt_generator.py
scripts/: startup_check.py
workflow/: lumina_workflow Gelbooru抽卡v1.json  lumina_workflow 手动输入提示词v1.json  lumina_workflow 本地知识库抽卡v1.json
