[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-advanced-prompt-processor"
version = "2.0.0"
description = "Advanced Prompt Processor for ComfyUI - 智能提示词处理、随机元素选择和Gelbooru标签集成"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "whitelinker", email = "whitelinker@example.com"}
]
maintainers = [
    {name = "whitelinker", email = "whitelinker@example.com"}
]
keywords = [
    "comfyui",
    "prompt-processing",
    "ai-art",
    "stable-diffusion",
    "gelbooru",
    "random-selection",
    "excel-integration"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "numpy>=1.19.0",
    "requests>=2.25.0",
    "urllib3>=1.26.0",
    "regex>=2021.0.0"
]

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "google-generativeai>=0.3.0"
]
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.910"
]
all = [
    "comfyui-advanced-prompt-processor[ai,dev]"
]

[project.urls]
Homepage = "https://github.com/Whitelinker574/advanced-prompt-processor"
Repository = "https://github.com/Whitelinker574/advanced-prompt-processor.git"
Documentation = "https://github.com/Whitelinker574/advanced-prompt-processor/blob/main/README.md"
"Bug Reports" = "https://github.com/Whitelinker574/advanced-prompt-processor/issues"
"Feature Requests" = "https://github.com/Whitelinker574/advanced-prompt-processor/discussions"

[tool.setuptools]
packages = ["advanced_prompt_processor", "advanced_prompt_processor.nodes"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json", "*.csv", "*.xlsx"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  __pycache__
  | \.git
  | \.pytest_cache
  | \.venv
  | venv
)/
'''

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    "__pycache__",
    ".git",
    ".pytest_cache",
    ".venv",
    "venv"
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py"
]